# Socratic_Loop

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
config/: model.py  model_manager.py  providers.py  settings.py
core/: graph.py  schemas.py  state.py
core/agents/: _base.py  opponent.py  presenter.py  referee.py
public/: custom.css
tests/: conftest.py  helpers.py  mock_nodes.py  test_agents.py  test_base.py  test_fetch_models_action.py  test_integration.py  test_interfaces.py  test_model.py  test_model_factory.py  test_model_manager.py  test_providers.py  test_settings_update.py  test_state_model_config.py  test_workflow.py
