[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socratic-loop"
version = "0.1.0"
description = "苏格拉底式学习循环 —— 基于 LangGraph + Chainlit 的多智能体学习引导系统"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.0.0",
    "chainlit>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app.py"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=2.0",
    "pyright>=1.1.400",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
